--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,11 @@
   
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Database=portfolio-will; User Id=sistema;Password=d22m04;TrustServerCertificate=True"    
+  },
+  "JwtSettings": {
+    "SecretKey": "Wa1B3l2iL4nAmL9aXe7YqT0CzM5uRkGp",
+    "Issuer": "WillPortfolioApi",
+    "Audience": "WillPortfolioUsers",
+    "ExpirationMinutes": 60
   }
 }
