Corrigindo Questoes de Seguranca

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,10 +9,10 @@
   "Swagger" :  "true",
   
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=portfolio-will; User Id=sistema;Password=d22m04;TrustServerCertificate=True"    
+    "DefaultConnection": "USE_SECRET"    
   },
   "JwtSettings": {
-    "SecretKey": "Wa1B3l2iL4nAmL9aXe7YqT0CzM5uRkGp",
+    "SecretKey": "USE_SECRETS",
     "Issuer": "WillPortfolioApi",
     "Audience": "WillPortfolioUsers",
     "ExpirationMinutes": 60
